--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "mcamara/laravel-localization": "^2.0"
+        "mcamara/laravel-localization": "^2.0",
+        "santigarcor/laratrust": "^8.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -65,4 +66,6 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true
+
+
 }
